Fix hero-caption mobile styles and disable user select on some hero elements

--- a/src/scss/modules/_branch-counter.scss
+++ b/src/scss/modules/_branch-counter.scss
@@ -10,6 +10,9 @@
     font-size: 0.75rem;
     text-align: right;
 
+    // visual
+    user-select: none;
+
     @include atDesktopM {
         // typography
         font-size: 1rem;
