--- a/src/scss/modules/_city-select.scss
+++ b/src/scss/modules/_city-select.scss
@@ -9,7 +9,7 @@
 .city-select__title {
     // box model
     margin: 0;
-    width: 100px;
+    // width: 100px;
 
     // typography
     color: $golden;
