--- a/src/scss/modules/_franch-promo.scss
+++ b/src/scss/modules/_franch-promo.scss
@@ -44,6 +44,9 @@
     font-family: $titleFont;
     font-size: 1rem;
 
+    // visual
+    user-select: none;
+
     @include atDesktopM {
         // positioning
         position: absolute;
